feat(web): add `restart` target to make

--- a/website/Makefile
+++ b/website/Makefile
@@ -1,7 +1,7 @@
 MAIN := cmd/api/main.go
 BIN := website
 
-.PHONY: all build run test clean watch shutdown
+.PHONY: all build run test clean watch shutdown restart
 
 all: build
 
@@ -29,3 +29,8 @@ watch:
 
 shutdown:
 	@./scripts/shutdown.sh
+
+restart:
+	@./scripts/shutdown.sh
+	@bash -c "./scripts/watch.sh > tmp/air.log 2>&1 &"
+	@echo "Watching..."
