--- a/fly.toml
+++ b/fly.toml
@@ -3,25 +3,29 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'prototyping-class-webapp'
-primary_region = 'gig'
+app = "prototyping-class-webapp"
+primary_region = "gig"
 
 [build]
 [build.args]
-GO_VERSION = '1.23.0'
+GO_VERSION = "1.23.0"
 
 [env]
-PORT = '8080'
+PORT = "8080"
 
 [http_service]
 internal_port = 8080
 force_https = false
-auto_stop_machines = 'stop'
+auto_stop_machines = "stop"
 auto_start_machines = true
 min_machines_running = 0
-processes = ['app']
+processes = ["app"]
+
+[[statics]]
+guest_path = "/usr/local/bin/web/static"
+url_prefix = "/static"
 
 [[vm]]
-memory = '1gb'
-cpu_kind = 'shared'
+memory = "1gb"
+cpu_kind = "shared"
 cpus = 1
